# IVSigma

./: .codecov.yml  404.html  CMakeLists.txt  README.md  alphabets.html  cpm.dependencies  functions.html  index.html  ivsigma-config.cmake  kmers.html  main.cpp  mkdocs.yml
.github/workflows/: ci.yml  ci_license_check.yml  ci_linux.yml  ci_macos.yml  ci_msvc.yml  ci_on_pr.yml  ci_publish_docs.yml  cron_daily.yml
docs/: alphabets.md  functions.md  index.md  kmers.md
docs/images/: relationship.png.license
docs/readthedocs-customization/css/: theme.css
docs/snippets/: CMakeLists.txt  char_to_rank.cpp  compact_encoding.cpp  compact_encoding.cpp.out  complement.cpp  fasta_reader_example.cpp  normalize_char.cpp  rank_to_char.cpp  reverse_complement.cpp  simple_example.cpp  verify.cpp  winnowing_minimizers.cpp  winnowing_minimizers.cpp.out
site/: 404.html
snippets/: CMakeLists.txt  char_to_rank.cpp  char_to_rank.cpp.out  compact_encoding.cpp  complement.cpp  complement.cpp.out  fasta_reader_example.cpp  fasta_reader_example.cpp.out  normalize_char.cpp  normalize_char.cpp.out  rank_to_char.cpp  rank_to_char.cpp.out  reverse_complement.cpp  reverse_complement.cpp.out  simple_example.cpp  verify.cpp  verify.cpp.out  verify.cpp.out.license  winnowing_minimizers.cpp.out
src/ivsigma/: CMakeLists.txt  alphabet.h  aminoacids.h  compact_encoding.h  concepts.h  delimited_alphabet.h  ivsigma.h  nucliotides.h  qualities.h  simple_alphabet.h  utility.h  winnowing_minimizer.h
src/test_header/: CMakeLists.txt
src/test_ivsigma/: CMakeLists.txt  main.cpp
